# Car-Dealership-Inventory-System

./: .gitignore  AI_Kata_Car_Dealership_Inventory_System_V2.md  PROMPTS.md  README.md  system_design.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  vehicles.py
backend/app/core/: config.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  refresh_token.py  user.py  vehicle.py
backend/app/schemas/: auth.py  vehicle.py
backend/app/services/: auth_service.py  vehicle_service.py
backend/tests/: conftest.py  test_auth.py  test_vehicles.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdminRoute.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useVehicles.ts
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/types/: index.ts
